[package]
name = "input_test"
version = "0.1.0"
authors = ["Sahil Khanna <sahilsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }
